fix overflow

--- a/css-failid/avaleht.css
+++ b/css-failid/avaleht.css
@@ -73,9 +73,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-}
-
-.copyright-text {
+  border-bottom-right-radius: 27px;
   font-size: 12px;
   color: rgb(255, 255, 255);
 }
